# machine-learning-by-example

./: .gitignore  README.md  pyproject.toml
neural-networks/: my-first-neural-network.ipynb  neural-network-training.ipynb  vectors-and-weights.ipynb
regressions/linear-regression/: multiple-variable-linear-regression.ipynb  multiple-variable-polynomial-regression.ipynb  simple-linear-regression.ipynb  single-variable-linear-regression.ipynb  single-variable-polynomial-regression.ipynb
