[tool.poetry]
name = "machine-learning-by-example"
version = "0.1.0"
description = "Machine Learning Examples"
authors = ["Bertrand Rigaldies <brigaldies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
